# SilverQuant

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  credentials.py  credentials_sample.py  install-hooks.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_ai_gen.py  run_redis_pull.py  run_redis_push.py  run_remote.py  run_shield.py  run_sword.py  run_swords.py  run_swords_tdx.py  run_wencai.py  run_wencai_qmt.py  run_wencai_tdx.py
_cache/: _code_names.csv  _pool_whitelist.txt
_doc/: CHANGELOG.md  CONFIGURATION.md
backtest/: gm_template.py
delegate/: base_delegate.py  base_subscriber.py  daily_backtest.py  daily_history.py  daily_reporter.py  gm_callback.py  gm_delegate.py  xt_callback.py  xt_delegate.py  xt_subscriber.py
mytt/: LastBar.py  MyTT.py  MyTT_custom.py
public/: README.md
reader/: README.md  akshare_adapter.py  amazing_data_adapter.py  base_adapter.py  constants.py  daily_history.py  mootdx_adapter.py  multi_source_reader.py  tushare_adapter.py  tushare_agent.py  utils.py  xtdata_adapter.py
selector/: select_wencai.py  selector_6msj.py  selector_daban.py
tests/: conftest.py  test_sample.py  test_tool_utils_cache.py  test_tools_pure_extra.py  test_tools_utils_remote.py  test_utils_basic_pure.py
tools/: constants.py  util_feishu.py  utils_basic.py  utils_cache.py  utils_cache_ak.py  utils_dfcf.py  utils_ding.py  utils_feishu.py  utils_gm.py  utils_logger.py  utils_miniqmt.py  utils_mootdx.py  utils_remote.py  utils_remote_sv.py  utils_remote_ts.py
trader/: buyer.py  pools.py  pools_indicator.py  (+4 more)
(+10 files in other folders)
